# SQL

lesson_1/: lesson1.txt
lesson_2/: lesson2.txt
lesson_3/: lesson3.txt
lesson_4/: config.py
lesson_4/poetry_app/: pyproject.toml
lesson_5/: config.py  main.py
lesson_5/users_cars_table/: add_data.txt  cars.txt
lesson_5/users_details_table/: add_data.txt  user_details.txt
lesson_5/users_finances_table/: add_data.txt  users_finances.txt
lesson_5/users_mobiles_table/: add_data.txt  user_mobiles.txt
lesson_5/users_table/: add_data.txt  users_table.txt
lesson_6/configs/: config.py  config_sql_connection.py
lesson_6/scripts/: migrate_users_data.py
lesson_6/tables/users_cars_table/: add_data.sql
lesson_6/tables/users_details_table/: add_data.sql  users_details.sql
lesson_6/tables/users_finances_table/: add_data.sql  users_finances.sql
lesson_6/tables/users_mobiles_table/: add_data.sql  users_mobiles.sql
lesson_6/tables/users_status_table/: users_status.sql
lesson_6/tables/users_table/: add_data.sql  users_table.sql
lesson_7/: main.py
lesson_7/configs/: config_sql_connection.py
lesson_7/tables/cars/: cars_controller.py
lesson_7/tables/users/: users_controller.py
lesson_7/tables/users_details/: details_controller.py
lesson_7/tables/users_finances/: finances_controller.py
lesson_7/tables/users_mobiles/: mobiles_controller.py
lesson_8/: main.py  main_with_transactions.py  sql_querys.py
lesson_8/configs/: config_sql_connection.py
lessson_4/: main.py  requirements.txt
lessson_4/pipenv_app/: Pipfile
