[tool.poetry]
name = "poetry-app"
version = "0.1.0"
description = ""
authors = ["aaslanyann <axvan2005@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_app"}]

[tool.poetry.dependencies]
python = "^3.11"
emoji = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
